--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 decorator==5.1.1
 Django==5.1
 django-extensions==3.2.3
+django-widget-tweaks==1.5.0
 executing==2.0.1
 idna==3.8
 ipython==8.27.0
