--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ asttokens==2.4.1
 certifi==2024.8.30
 charset-normalizer==3.3.2
 decorator==5.1.1
-Django==5.1
+Django==5.1.5
 django-extensions==3.2.3
+django-shell-plus==1.1.7
 django-widget-tweaks==1.5.0
 executing==2.0.1
 idna==3.8
