--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ decorator==5.1.1
 Django==5.1.5
 django-extensions==3.2.3
 django-shell-plus==1.1.7
+django-sqids==0.2.1
 django-widget-tweaks==1.5.0
 executing==2.0.1
 idna==3.8
@@ -23,6 +24,7 @@ Pygments==2.18.0
 python-dotenv==1.0.1
 requests==2.32.3
 six==1.16.0
+sqids==0.5.1
 sqlparse==0.5.1
 stack-data==0.6.3
 traitlets==5.14.3
