updated settings and requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,35 @@
 asgiref==3.8.1
-asttokens==2.4.1
+autocommand==2.2.2
+backports.tarfile==1.2.0
 bugsnag==4.7.1
-certifi==2024.8.30
-charset-normalizer==3.3.2
-decorator==5.1.1
-Django==5.1.7
+certifi==2025.1.31
+charset-normalizer==3.4.1
+Django==5.2
 django-extensions==3.2.3
 django-shell-plus==1.1.7
 django-sqids==0.2.1
+django-storages==1.14.2
 django-widget-tweaks==1.5.0
-executing==2.0.1
-idna==3.8
-ipython==8.27.0
-jedi==0.19.1
-matplotlib-inline==0.1.7
-parso==0.8.4
-pexpect==4.9.0
-prompt_toolkit==3.0.47
+git-filter-repo==2.47.0
+idna==3.10
+importlib_metadata==8.0.0
+jaraco.collections==5.1.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jaraco.text==4.0.0
+more-itertools==10.7.0
+packaging==25.0
+pillow==11.2.1
+pillow_heif==0.22.0
 psycopg==3.2.1
-ptyprocess==0.7.0
-pure_eval==0.2.3
-Pygments==2.18.0
 python-dotenv==1.0.1
 requests==2.32.3
-six==1.16.0
 sqids==0.5.1
-sqlparse==0.5.1
-stack-data==0.6.3
-traitlets==5.14.3
-typing_extensions==4.12.2
-urllib3==2.2.2
-wcwidth==0.2.13
+sqlparse==0.5.3
+tinycss2==1.4.0
+tomli==2.0.1
+typing_extensions==4.13.2
+urllib3==2.4.0
+webencodings==0.5.1
 WebOb==1.8.9
+zipp==3.21.0
