--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-.env
-
 # Misc files
 *.scssc
-*.pyc
-.DS_Store
 *.sublime-workspace
 *.sublime-project
 
@@ -14,3 +10,69 @@ app/tests/__pycache__/*
 # virtual env packages
 **/venv/**/*
 
+# Ignore all .jpg and .png files
+*.jpg
+*.png
+
+# Except for the 'staticfiles/image' directory
+!staticfiles/image/
+!staticfiles/image/*.jpg
+!staticfiles/image/*.png
+!staticfiles/favicon/*.jpg
+!staticfiles/favicon/*.png
+!staticfiles/favicon/favicon.ico
+
+# Ignore environment files
+.env
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+*.sqlite3
+venv/
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Directories #
+######################
+env/
+db.sqlite3
+media/
+**/*/__pycache__/**/*
+ __pycache__/
+ *.pyc
+cache/
+
+# .gitignore
